--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %>Create a new Radlibs Template!<% end %>
 <h3>New Template</h3><br />
 <h5>How its done:</h5>
 <p><strong>You write a story and anything put between {{brackets}} will become a blank input field for the people filling out your radlib.</strong></p>
