--- a/app/views/radlibs/new.html.erb
+++ b/app/views/radlibs/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :title do "Filling Out: #{@radlib.template.title}" end %>
+
 <h3>Fill Out <%= @radlib.template.title %></h3>
 <hr>
 <%= render 'form' %>
