--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,8 +50,6 @@
         s.parentNode.insertBefore(t, s);
       })();
     </script>
-    <script type="text/javascript">
-      new HelloBar( "<span>Like RadLibs?<\/span> <a href='http://railsrumble.com/entries/316-twenty-percent' class='button'>Why not vote for us?<\/a>", {}, 1.0 );
-    </script>
+    <script src="http://s0.railsrumble.com/banner.js" type="text/javascript"></script>
   </body>
 </html>
