Changed vote banner colors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,13 @@
         s.parentNode.insertBefore(t, s);
       })();
     </script>
+    <script type="text/javascript">
+      var rumbleBannerBackgroundColor, rumbleBannerTextColor, rumbleBannerLinkColor, rumbleBannerPlacement;
+      rumbleBannerBackgroundColor = "#161616";
+      rumbleBannerTextColor = "#6C9AA8";
+      rumbleBannerLinkColor = "#F16E38";
+      rumbleBannerPlacement = "top";
+    </script>
     <script src="http://s0.railsrumble.com/banner.js" type="text/javascript"></script>
   </body>
 </html>
