--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
-<% content_for :title do %>Create Adjective stories to Verb with your Noun!<% end %>
+<% content_for :title do %>Create Adjective stories to Verb with your Nouns!<% end %>
 
 <div class="span8 pull-left home_main">
 <h4>Welcome to Radlibs</h4>
 <hr>
 <h7 id="tagline">
-  <strong>Create <span contenteditable="true" class="highlight" onclick="document.execCommand('selectAll',false,null)">Adjective</span> stories to <span contenteditable="true" class="highlight" onclick="document.execCommand('selectAll',false,null)">Verb</span> with your <span contenteditable="true" class="highlight" onclick="document.execCommand('selectAll',false,null)">Noun</span>!</strong>
+  <strong>Create <span contenteditable="true" class="highlight" onclick="document.execCommand('selectAll',false,null)">Adjective</span> stories to <span contenteditable="true" class="highlight" onclick="document.execCommand('selectAll',false,null)">Verb</span> with your <span contenteditable="true" class="highlight" onclick="document.execCommand('selectAll',false,null)">Nouns</span>!</strong>
 </h7>
 <hr>
 <h5>Recent Radlib Templates</h5>
