Wrong name in copy

--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -43,7 +43,7 @@
 </h4>
 
 <p>
-  Louis is working on my own startup
+  Nikhil is working on my own startup
   <a href="http://nfoshare.com/">Nfoshare</a>, a social Q&amp;A platform to
   connect college student questions to their faculty, university tutors and
   their classmates to have real-time academic conversations.
