Remove new template link when not authorized
  Okay, so I spent a looong time debuging this. Turns out in the view
   `Template` translates to `ActionView::Template` and we need to use
   `::Template` if we want to access our model Class.

  We should consider changing the name Template to something else.

--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,7 +1,7 @@
 <% content_for :title do %>Viewing Radlibs Templates<% end %>
 
 <h3>Radlib Templates</h3>
-<% if can? :create, Template %>
+<% if can? :create, ::Template %>
   <div>
   <%= link_to '+ New Template', new_template_path %>
   </div>
