--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -7,16 +7,15 @@
 </h4>
 
 <% present @template do |presenter| %>
-<p>
-<%= presenter.template_sans_markup %>
-</p>
+  <p><%= presenter.template_sans_markup %></p>
 <% end %>
 <br />
 
 <%= link_to 'Back', templates_path %> |
 <% if can? :create, Radlib %>
-<%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
+  <%= link_to 'Fill Out!', new_radlib_path(template_id: @template) %>
 <% end %>
+
 <div class="pull-right">
   | <%= pluralize @template.reputation_for(:votes).to_i, "vote" %>
   <% if current_user && current_user.voted_for_template?(@template) %>
@@ -25,22 +24,23 @@
   <% end %>
 </div>
 <hr>
+
 <% @template.radlibs.each_with_index do |radlib, n|%>
+    <h6 class="pull-left titlehalf"><%= n + 1%>. <%= radlib.user.name %><br />
+      <div class="pull-left"><%= link_to "Read", radlib_path(radlib) %></div></h6>
 
-<h6 class="pull-left titlehalf"><%= n + 1%>. <%= radlib.user.name %><br /><div class="pull-left"><%= link_to "Read", radlib_path(radlib) %></div></h6>
-<% present radlib do |presenter| %>
-<p>
-  <%= presenter.filled_in_radlib %>
-</p>
-<div class="pull-right">
-    | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
-    <% if current_user && !current_user.voted_for_radlib?(radlib) %>
-      | <%= link_to "up", vote_radlib_path(radlib, type: "up"), method: "post" %>
-      | <%= link_to "down", vote_radlib_path(radlib, type: "down"), method: "post" %>
-    <% end %>
+  <% present radlib do |presenter| %>
+    <p>
+      <%= presenter.filled_in_radlib %>
+    </p>
+
+    <div class="pull-right">
+      | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
+      <% if current_user && !current_user.voted_for_radlib?(radlib) %>
+        | <%= link_to "up", vote_radlib_path(radlib, type: "up"), method: "post" %>
+        | <%= link_to "down", vote_radlib_path(radlib, type: "down"), method: "post" %>
+      <% end %>
     </div>
-<br />
-<hr>
-<% end %>
-
+    <br /><hr>
+  <% end %>
 <% end %>
