--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,41 +1,32 @@
-<%= link_to image_tag( 'logo.png'), root_path, :class => 'brand' %><%= link_to image_tag( 'logo_hover.png'), root_path, :class => 'brand2' %>
+<%= link_to image_tag( 'logo.png'), root_path, :class => 'brand' %>
+<%= link_to image_tag( 'logo_hover.png'), root_path, :class => 'brand2' %>
+
 <ul class="nav">
   <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Templates', templates_path %>
-    </li>
-    <li>
-    <%= link_to 'Radlibs', radlibs_path %>
-    </li>
-
+    <li><%= link_to 'Templates', templates_path %></li>
+    <li><%= link_to 'Radlibs', radlibs_path %></li>
 </ul>
 <%end%>
+
 <ul class="nav pull-right">
   <% if user_signed_in? %>
-    <li>
-    <%= link_to 'Logout', signout_path %>
-    </li>
-
+    <li><%= link_to 'Logout', signout_path %></li>
 </ul>
   <% else %>
     <% unless Rails.env.production? %>
-    <li>
-      <%= link_to 'Developer Login', '/auth/developer' %>
-    </li>
+      <li><%= link_to 'Developer Login', '/auth/developer' %></li>
     <% end %>
-    <li>
-      <%= link_to 'Sign in with Twitter', '/auth/twitter' %>
-    </li>
+
+    <li><%= link_to 'Sign in with Twitter', '/auth/twitter' %></li>
 </ul>
   <% end %>
-  <% if user_signed_in? %>
- 
-    <ul class="nav pull-right">
-      <li>
-          <%= link_to current_user.name, user_path(current_user) %>
-      </li>
-      <li><%= link_to current_user.reputation_for(:votes).to_i, user_path(current_user), :class => "rep" %></li>
-      </ul>
 
+  <% if user_signed_in? %>
+    <ul class="nav pull-right">
+      <li><%= link_to current_user.name, user_path(current_user) %></li>
+      <li>
+        <%= link_to current_user.reputation_for(:votes).to_i, user_path(current_user), :class => "rep" %>
+      </li>
+    </ul>
   <% end %>
 </ul>
