--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -1,23 +1,23 @@
 <% content_for :title do %>Viewing Radlibs Templates<% end %>
 
 <h3>Radlib Templates</h3>
+
 <% if can? :create, ::Template %>
-  <div>
-  <%= link_to '+ New Template', new_template_path %>
-  </div>
+  <div><%= link_to '+ New Template', new_template_path %></div>
 <% end %>
 <hr>
 
 <% @templates.each do |template| %>
   <%if template.created_at >= Time.now - 24.hours%>
-  <div class="itsnew pull-right"></div>
+    <div class="itsnew pull-right"></div>
   <%end%>
 
   <h6><%= template.title %></h6>
-  <h7>By: <%= template.user.name %></h7><br /><br />
+  <h7>By: <%= template.user.name %></h7>
+  <br /><br />
 
   <% present template do |presenter| %>
-  <p><%= presenter.truncated_template_sans_markup %></p>
+    <p><%= presenter.truncated_template_sans_markup %></p>
   <% end %>
   <br /><br />
 
@@ -25,22 +25,21 @@
 
   <% present template do |presenter| %>
     <%= pluralize presenter.get_words_count, "editable" %>
-  <%end%><br />
+  <%end%>
+  <br />
 
   <%= link_to 'View Template', template %> |
-
   <% if can? :create, Radlib %>
-  <%= link_to 'Fill out!', new_radlib_path(template_id: template) %>
+    <%= link_to 'Fill out!', new_radlib_path(template_id: template) %>
   <% end %>
 
   <div class="pull-right">
     | <%= pluralize template.reputation_for(:votes).to_i, "vote" %>
     <% if current_user %>
-    | <%= link_to "up", vote_template_path(template, type: "up"), method: "post" %>
-    | <%= link_to "down", vote_template_path(template, type: "down"), method: "post" %>
+      | <%= link_to "up", vote_template_path(template, type: "up"), method: "post" %>
+      | <%= link_to "down", vote_template_path(template, type: "down"), method: "post" %>
     <% end %>
   </div>
   <hr>
 <% end %>
 <br />
-
