changed style and changed homepage recents from 24 hours to last 5

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
-<%= link_to image_tag( 'logo.png'), root_path, :class => 'brand' %>
-<%= link_to image_tag( 'logo_hover.png'), root_path, :class => 'brand2' %>
+<%= link_to image_tag( 'logo_big.png'), root_path, :class => 'brand' %>
+<%= link_to image_tag( 'logo_big.png'), root_path, :class => 'brand2' %>
 
 <ul class="nav">
   <% if can? :read, Template %>
