--- a/app/assets/stylesheets/louis.css.scss.erb
+++ b/app/assets/stylesheets/louis.css.scss.erb
@@ -1,6 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Trocchi|Droid+Sans);
 body{
-	background:url(<%= asset_path "bg2.png" %>);
+	background: #07061c!important;
 	font-family: Droid Sans, helvetica;	
 	font-size: 12px;
 	color: #806e5e;
@@ -56,7 +56,7 @@ margin-bottom: 0;
 	margin-top: 20px;
 	background:white;
 	box-shadow: 0px 2px 1px #85a379;
-	border-radius:0px;
+	border-radius:5px;
 	min-height: 700px;
 }
 .navbar .nav > li > a {
@@ -64,11 +64,11 @@ float: none;
 padding: 20px 15px 10px;
 color: white;
 text-decoration: none;
-text-shadow: 0 1px 0 #85a379;
+text-shadow: none;
 font-family: Droid Sans, helvetica;	
 }
 .navbar .nav > li > a:hover {
-color: 2b241e;
+color: #feebaa;
 transition: color 0.5s;
 -moz-transition: color 0.5s; /* Firefox 4 */
 -webkit-transition: color 0.5s; /* Safari and Chrome */
@@ -109,7 +109,7 @@ font-weight: 200;
 color: #555;
 text-shadow: 0 1px 0 white;
 position:relative;
-left: -153px;
+left: -257px;
 z-index:-1;
 margin-right: -153px;
 }
@@ -190,4 +190,9 @@ height: 1px;
 .name_push{
 	margin-top: -40px;
 	opacity: 0.7;
+}
+#tagline{
+	color: #2b241e;
+	font-family: Droid sans;
+	margin: 15px 0px 30px 0px;
 }
