--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,25 +18,7 @@
   <div class="itsnew"></div>
   <hr width="250px">
 
-  <% @recentradlibs.each do |radlib| %>
-    <h6><%= radlib.template.title %></h6>
-    <h7 class="pull-left name_push"><%= radlib.user.name %></h7>
-    <% present radlib do |presenter| %>
-      <%= presenter.filled_in_radlib %>
-    <% end %><br /><br />
-
-    <%= link_to 'Show', radlib %> |
-    <%= link_to 'View Template', template_path(radlib.template) %>
-
-    <div class="pull-right">
-      | <%= pluralize radlib.reputation_for(:votes).to_i, "vote" %>
-      <% if current_user && !current_user.voted_for_radlib?(radlib) %>
-        | <%= link_to "up", vote_radlib_path(radlib, type: "up"), method: "post" %>
-        | <%= link_to "down", vote_radlib_path(radlib, type: "down"), method: "post" %>
-      <% end %>
-    </div>
-    <hr>
-  <% end %>
+  <%= render partial: 'radlibs/radlib', collection: @recentradlibs %>
 </div>
 <br /><br />
 
