Replace instance var with local var

--- a/app/views/radlibs/_form.html.erb
+++ b/app/views/radlibs/_form.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for(@radlib) do |f| %>
+<%= simple_form_for(radlib) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <% present @radlib do |presenter| %>
+    <% present radlib do |presenter| %>
       <div id="radlib">
         <%= presenter.editable_radlib %>
       </div>
