--- a/app/views/templates/_template.html.erb
+++ b/app/views/templates/_template.html.erb
@@ -3,7 +3,7 @@
 <%end%>
 
 <h6><%= template.title %></h6>
-<h7>By: <%= template.user.name %></h7>
+<h7>By: <%= template.user_name %></h7>
 <br /><br />
 
 <% present template do |presenter| %>
