--- a/app/views/radlibs/_radlib.html.erb
+++ b/app/views/radlibs/_radlib.html.erb
@@ -2,7 +2,7 @@
   <div class="itsnew pull-right"></div>
 <%end%>
 
-<h6><%= radlib.template.title %></h6>
+<h6><%= radlib.template_title %></h6>
 
 <% present radlib do |presenter| %>
   <%= presenter.filled_in_radlib %>
