--- a/app/views/radlibs/new.html.erb
+++ b/app/views/radlibs/new.html.erb
@@ -1,6 +1,6 @@
-<% content_for :title do "Filling Out: #{@radlib.template.title}" end %>
+<% content_for :title do "Filling Out: #{@radlib.template_title}" end %>
 
-<h3>Fill Out <%= @radlib.template.title %></h3>
+<h3>Fill Out <%= @radlib.template_title %></h3>
 <hr>
 
 <%= render 'form', radlib: @radlib %>
