--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,12 +2,12 @@
 <%= link_to image_tag( 'logo_big.png'), root_path, :class => 'brand2' %>
 
 <ul class="nav">
-  <% if can? :read, Template %>
-    <li><%= link_to 'Templates', templates_path %></li>
-  <% end %>
-
   <% if can? :read, Radlib %>
     <li><%= link_to 'Radlibs', radlibs_path %></li>
+  <% end %>
+
+  <% if can? :read, Story %>
+    <li><%= link_to 'Stories', stories_path %></li>
   <% end %>
 </ul>
 
