--- a/app/views/radlibs/new.html.erb
+++ b/app/views/radlibs/new.html.erb
@@ -1,7 +1,18 @@
-<% content_for :title do "Filling Out: #{@radlib.template_title}" end %>
+<% content_for :title do %>Create a new Radlib!<% end %>
+<h3>New Radlib</h3>
+<br />
+<h5>How its done:</h5>
 
-<h3>Fill Out <%= @radlib.template_title %></h3>
+<p><strong>You write a story and anything put between {{brackets}} will become a blank input field for the people filling out your Radlib.</strong></p>
 <hr>
+
+<strong>Tips:</strong>
+<br />
+<p>Try to give the user a hint<em> eg. His name was{{name}}....the {{vehicle}} approached {{adverb}}...The cat ate so much {{food_type}} it eventually just {{action}}</em></p>
+
+<p>Make sure you don't put spaces between your {{bracketed_words}} use an _underscore_ instead. </p>
+
+<hr width="325px">
 
 <%= render 'form', radlib: @radlib %>
 
