--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,7 @@
 </ul>
 
 <ul class="nav pull-right">
-  <% if user_signed_in? %>
+  <% if current_user %>
     <li><%= link_to 'Logout', signout_path %></li>
 
   <% else %>
@@ -24,7 +24,7 @@
   <% end %>
 </ul>
 
-<% if user_signed_in? %>
+<% if current_user %>
   <ul class="nav pull-right">
     <li><%= link_to current_user.name, user_path(current_user) %></li>
     <li>
