Labeled canonical tweet button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
             <div class="span12">
               <%= render 'layouts/messages' %>
               <div class="pull-right">
+                <span>Share #Radlibs on Twitter!</span>
                 <div id="tweet-tagline">
                   <a href="https://twitter.com/share" class="twitter-share-button" data-hashtags="radlibs" rel="canonical">Tweet</a>
                 </div>
